Fixed whitespace in background photo

--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -35,9 +35,15 @@ h6 {
     padding-bottom: 50px;
     text-align: center;
     color: #f8f8f8;
-    background: url(../img/hiking.jpg) no-repeat center center;
-    background-size: cover;
     height: inherit;
+}
+
+.background-image-hiking {
+    background: url(../img/hiking.jpg) no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
 
 body {
